correct spacing to the right for Create buttons

--- a/js/app/css/style.css
+++ b/js/app/css/style.css
@@ -289,6 +289,7 @@ td.amount {
 }
 .editEntryScene .dijitButton.create:not(.full-width) {
 	width: 68%;
+	float: right;
 }
 .button-row {
 	margin: 0 2%;
